update twine game

--- a/trick-or-treat.html
+++ b/trick-or-treat.html
@@ -45,7 +45,7 @@ Do you:]
 
 &lt;p&gt;You can now explore the town.&lt;/p&gt;]
 
-&lt;img src = &quot;C:\Users\krist\Documents\Fall 2022\Game Prototyping\Halloween Game\NarrativeMap.png&quot; width=&quot;75%&quot; height=&quot;auto&quot;&gt;
+&lt;img src = &quot;https://raw.githubusercontent.com/kristenmarcinek/Twine-Game/main/Assets/NarrativeMap.png&quot; width=&quot;75%&quot; height=&quot;auto&quot;&gt;
 
 [[Enter schoolhouse]]
 [[Go to a house]]
@@ -115,7 +115,7 @@ As you turn the knob, you feel that the front door is locked.]
 [[Barge in]]
 [[Look for the key]]</tw-passagedata><tw-passagedata pid="11" name="Look for the key" tags="" position="1900,550" size="100,100">(font:&quot;Jolly Lodger&quot;) + (css: &quot;font-size: 40px&quot;)[Where in town do you think you can look?]
 
-&lt;img src = &quot;C:\Users\krist\Documents\Fall 2022\Game Prototyping\Halloween Game\NarrativeMap.png&quot; width=&quot;75%&quot; height=&quot;auto&quot;&gt;
+&lt;img src = &quot;https://raw.githubusercontent.com/kristenmarcinek/Twine-Game/main/Assets/NarrativeMap.png&quot; width=&quot;75%&quot; height=&quot;auto&quot;&gt;
 
 [[Look in the graveyard]]
 [[Look at a house]]
@@ -214,9 +214,9 @@ As you follow the cat through the town, you spot The Girl! [[You walk over]].]
 
 
 </tw-passagedata><tw-passagedata pid="32" name="Crying, The Girl runs from you..." tags="" position="1700,2125" size="100,100">(font:&quot;Jolly Lodger&quot;) + (css: &quot;font-size: 40px&quot;)[Crying, The Girl runs from you deep into the Forest. You are unsure if you should call to her, or just leave it be.]</tw-passagedata><tw-passagedata pid="33" name="The Girl wants to talk to you!" tags="" position="1825,2125" size="100,100">(font:&quot;Jolly Lodger&quot;) + (css: &quot;font-size: 40px&quot;)[Timidly, the girl tells you thank you. You chew her ear off about how Wonder Woman is your favorite superhero. She giggles. In the distance you hear a call, is it a name? Before you know it, she runs away into the darkness of the forest, but not before she gives you a kiss on your sheet-covered cheek.]</tw-passagedata><tw-passagedata pid="34" name="Enter" tags="" position="2100,0" size="100,100">=&gt;&lt;=
-&lt;img src=&quot;C:\Users\krist\Documents\GitHub\Twine-Game\Assets\Start Menu Tombstone (1).png&quot;&gt;
+&lt;img src=&quot;https://raw.githubusercontent.com/kristenmarcinek/Twine-Game/main/Assets/ToTS%20Logo.png&quot;&gt;
 
-[[&lt;img src=&quot;C:\Users\krist\Documents\GitHub\Twine-Game\Assets\ToTS Logo.png&quot;&gt;-&gt;Enter... if you dare!]]
+[[&lt;img src=&quot;https://raw.githubusercontent.com/kristenmarcinek/Twine-Game/main/Assets/Start%20Menu%20Tombstone%20(1).png&quot;&gt;-&gt;Enter... if you dare!]]
 
 </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
